kustomize/components/minikube-tls/ingress-minikube.yaml
# ingress-minikube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: frontend-tls
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
